M2Z4 z4l2: make retraining work-triggered
